<?xml version="1.0" encoding="utf-8"?>
<Keyboard android:keyWidth="@dimen/key_width" android:keyHeight="@dimen/key_height" android:horizontalGap="@dimen/keyboard_horizontal_gap" android:verticalGap="@dimen/keyboard_vertical_gap"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Row android:rowEdgeFlags="top">
        <Key android:codes="49" android:popupKeyboard="@xml/shift_1" android:keyEdgeFlags="left" android:keyLabel="1" />
        <Key android:codes="50" android:popupKeyboard="@xml/shift_2" android:keyLabel="2" />
        <Key android:codes="51" android:popupKeyboard="@xml/shift_3" android:keyLabel="3" />
        <Key android:codes="52" android:popupKeyboard="@xml/shift_4" android:keyLabel="4" />
        <Key android:codes="53" android:popupKeyboard="@xml/shift_5" android:keyLabel="5" />
        <Key android:codes="54" android:popupKeyboard="@xml/shift_6" android:keyLabel="6" />
        <Key android:codes="55" android:popupKeyboard="@xml/shift_7" android:keyLabel="7" />
        <Key android:codes="56" android:popupKeyboard="@xml/shift_8" android:keyLabel="8" />
        <Key android:codes="57" android:popupKeyboard="@xml/shift_9" android:keyLabel="9" />
        <Key android:codes="48" android:popupKeyboard="@xml/shift_0" android:keyLabel="0" />
        <Key android:codes="-5" android:keyEdgeFlags="right" android:keyLabel="@string/keyboardview_keycode_delete" android:keyIcon="@drawable/ic_ime_delete" />
    </Row>
    <Row>
        <Key android:keyLabel=";" android:keyEdgeFlags="left" />
        <Key android:keyLabel="α" />
        <Key android:keyLabel="β" />
        <Key android:keyLabel="γ" />
        <Key android:keyLabel="δ" />
        <Key android:keyLabel="ε" />
        <Key android:keyLabel="ζ" />
        <Key android:keyLabel="η" />
        <Key android:keyLabel="θ" />
        <Key android:keyLabel="ι" />
        <Key android:keyLabel="`" android:keyEdgeFlags="right" />
    </Row>
    <Row>
        <Key android:keyEdgeFlags="left" android:keyLabel="κ" />
        <Key android:keyLabel="λ" />
        <Key android:keyLabel="μ" />
        <Key android:keyLabel="ν" />
        <Key android:keyLabel="ξ" />
        <Key android:keyLabel="ο" />
        <Key android:keyLabel="π" />
        <Key android:keyLabel="ρ" />
        <Key android:keyLabel="ς" />
        <Key android:keyLabel=":" />
        <Key android:keyLabel="\u0022" android:keyEdgeFlags="right" />
    </Row>
    <Row>
        <Key android:keyEdgeFlags="left" android:keyLabel="σ" />
        <Key android:keyLabel="τ" />
        <Key android:keyLabel="υ" />
        <Key android:keyLabel="φ" />
        <Key android:keyLabel="χ" />
        <Key android:keyLabel="ψ" />
        <Key android:keyLabel="ω" />
        <Key android:keyLabel="," />
        <Key android:keyLabel="." />
        <Key android:keyLabel="/" />
        <Key android:keyLabel="\?" android:keyEdgeFlags="right" />
    </Row>
    <Row android:rowEdgeFlags="bottom">
        <Key android:codes="-2" android:keyEdgeFlags="left" android:keyLabel="@string/keyboardview_keycode_mode_change" android:keyIcon="@drawable/ic_ime_symbols" />
        <Key android:codes="-1" android:keyLabel="@string/keyboardview_keycode_shift" android:keyIcon="@drawable/ic_ime_shift_off" />
        <Key android:codes="-9" android:keyLabel="@string/keyboardview_keycode_lang" android:keyIcon="@drawable/ic_ime_world" />
        <Key android:keyWidth="@dimen/space_key_width" android:codes="32" android:keyLabel="@string/keyboardview_keycode_space" android:keyIcon="@drawable/ic_ime_space" />
        <Key android:codes="-7" android:keyLabel="@string/keyboardview_keycode_voice" android:keyIcon="@drawable/ic_ime_voice" />
        <Key android:codes="-3" android:keyLabel="@string/keyboardview_keycode_left" android:keyIcon="@drawable/ic_ime_left_arrow" />
        <Key android:codes="-4" android:keyEdgeFlags="right" android:keyLabel="@string/keyboardview_keycode_right" android:keyIcon="@drawable/ic_ime_right_arrow" />
    </Row>
</Keyboard>
