<?xml version="1.0" encoding="utf-8"?>
<Keyboard android:keyWidth="@dimen/key_width" android:keyHeight="@dimen/key_height" android:horizontalGap="@dimen/keyboard_horizontal_gap" android:verticalGap="@dimen/keyboard_vertical_gap"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Row android:rowEdgeFlags="top">
        <Key android:codes="49" android:popupKeyboard="@xml/shift_1" android:keyEdgeFlags="left" android:keyLabel="1" />
        <Key android:codes="50" android:popupKeyboard="@xml/shift_2" android:keyLabel="2" />
        <Key android:codes="51" android:popupKeyboard="@xml/shift_3" android:keyLabel="3" />
        <Key android:codes="52" android:popupKeyboard="@xml/shift_4" android:keyLabel="4" />
        <Key android:codes="53" android:popupKeyboard="@xml/shift_5" android:keyLabel="5" />
        <Key android:codes="54" android:popupKeyboard="@xml/shift_6" android:keyLabel="6" />
        <Key android:codes="55" android:popupKeyboard="@xml/shift_7" android:keyLabel="7" />
        <Key android:codes="56" android:popupKeyboard="@xml/shift_8" android:keyLabel="8" />
        <Key android:codes="57" android:popupKeyboard="@xml/shift_9" android:keyLabel="9" />
        <Key android:codes="48" android:popupKeyboard="@xml/shift_0" android:keyLabel="0" />
        <Key android:codes="-5" android:keyEdgeFlags="right" android:keyLabel="@string/keyboardview_keycode_delete" android:keyIcon="@drawable/ic_ime_delete" />
    </Row>
    <Row>
        <Key android:popupKeyboard="@xml/accent_fa_a" android:keyEdgeFlags="left" android:keyLabel="ا|آ" />
        <Key android:keyLabel="ب" />
        <Key android:keyLabel="پ" />
        <Key android:keyLabel="ت" />
        <Key android:keyLabel="ث" />
        <Key android:keyLabel="ج" />
        <Key android:keyLabel="چ" />
        <Key android:keyLabel="ح" />
        <Key android:keyLabel="خ" />
        <Key android:keyLabel="د" />
        <Key android:keyEdgeFlags="right" android:keyLabel="ذ" />
    </Row>
    <Row>
        <Key android:keyEdgeFlags="left" android:keyLabel="ر" />
        <Key android:keyLabel="ز" />
        <Key android:keyLabel="ژ" />
        <Key android:keyLabel="س" />
        <Key android:keyLabel="ش" />
        <Key android:keyLabel="ص" />
        <Key android:keyLabel="ض" />
        <Key android:keyLabel="ط" />
        <Key android:keyLabel="ظ" />
        <Key android:keyLabel="ع" />
        <Key android:keyEdgeFlags="right" android:keyLabel="غ" />
    </Row>
    <Row>
        <Key android:keyEdgeFlags="left" android:keyLabel="ف" />
        <Key android:keyLabel="ق" />
        <Key android:keyLabel="ک" />
        <Key android:keyLabel="گ" />
        <Key android:keyLabel="ل" />
        <Key android:keyLabel="م" />
        <Key android:keyLabel="ن" />
        <Key android:keyLabel="و" />
        <Key android:keyLabel="ه" />
        <Key android:keyLabel="ی" />
        <Key android:keyEdgeFlags="right" android:keyLabel="ئ" />
    </Row>
    <Row android:rowEdgeFlags="bottom">
        <Key android:codes="-2" android:keyEdgeFlags="left" android:keyLabel="@string/keyboardview_keycode_mode_change" android:keyIcon="@drawable/ic_ime_symbols" />
        <Key android:codes="-1" android:keyLabel="@string/keyboardview_keycode_shift" android:keyIcon="@drawable/ic_ime_shift_off" />
        <Key android:codes="-9" android:keyLabel="@string/keyboardview_keycode_lang" android:keyIcon="@drawable/ic_ime_world" />
        <Key android:keyWidth="@dimen/space_key_width" android:codes="32" android:keyLabel="@string/keyboardview_keycode_space" android:keyIcon="@drawable/ic_ime_space" />
        <Key android:codes="-7" android:keyLabel="@string/keyboardview_keycode_voice" android:keyIcon="@drawable/ic_ime_voice" />
        <Key android:codes="-3" android:keyLabel="@string/keyboardview_keycode_left" android:keyIcon="@drawable/ic_ime_left_arrow" />
        <Key android:codes="-4" android:keyEdgeFlags="right" android:keyLabel="@string/keyboardview_keycode_right" android:keyIcon="@drawable/ic_ime_right_arrow" />
    </Row>
</Keyboard>
