<?xml version="1.0" encoding="utf-8"?>
<Keyboard android:keyWidth="@dimen/key_width" android:keyHeight="@dimen/key_height" android:horizontalGap="@dimen/keyboard_horizontal_gap" android:verticalGap="@dimen/keyboard_vertical_gap"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Row android:rowEdgeFlags="top">
        <Key android:codes="49" android:popupKeyboard="@xml/shift_1" android:keyEdgeFlags="left" android:keyLabel="1" />
        <Key android:codes="50" android:popupKeyboard="@xml/shift_2" android:keyLabel="2" />
        <Key android:codes="51" android:popupKeyboard="@xml/shift_3" android:keyLabel="3" />
        <Key android:codes="52" android:popupKeyboard="@xml/shift_4" android:keyLabel="4" />
        <Key android:codes="53" android:popupKeyboard="@xml/shift_5" android:keyLabel="5" />
        <Key android:codes="54" android:popupKeyboard="@xml/shift_6" android:keyLabel="6" />
        <Key android:codes="55" android:popupKeyboard="@xml/shift_7" android:keyLabel="7" />
        <Key android:codes="56" android:popupKeyboard="@xml/shift_8" android:keyLabel="8" />
        <Key android:codes="57" android:popupKeyboard="@xml/shift_9" android:keyLabel="9" />
        <Key android:codes="48" android:popupKeyboard="@xml/shift_0" android:keyLabel="0" />
        <Key android:codes="-5" android:keyEdgeFlags="right" android:keyLabel="@string/keyboardview_keycode_delete" android:keyIcon="@drawable/ic_ime_delete" />
    </Row>
    <Row>
        <Key android:popupKeyboard="@xml/accent_a" android:keyEdgeFlags="left" android:keyLabel="a" />
        <Key android:keyLabel="ä" />
        <Key android:popupKeyboard="@xml/shift_b" android:keyLabel="b" />
        <Key android:popupKeyboard="@xml/accent_c" android:keyLabel="c" />
        <Key android:popupKeyboard="@xml/accent_d" android:keyLabel="d" />
        <Key android:popupKeyboard="@xml/accent_e" android:keyLabel="e" />
        <Key android:popupKeyboard="@xml/shift_f" android:keyLabel="f" />
        <Key android:popupKeyboard="@xml/accent_g" android:keyLabel="g" />
        <Key android:popupKeyboard="@xml/shift_h" android:keyLabel="h" />
        <Key android:popupKeyboard="@xml/accent_i" android:keyLabel="i" />
        <Key android:popupKeyboard="@xml/shift_j" android:keyEdgeFlags="right" android:keyLabel="j" />
    </Row>
    <Row>
        <Key android:popupKeyboard="@xml/accent_k" android:keyEdgeFlags="left" android:keyLabel="k" />
        <Key android:popupKeyboard="@xml/accent_l" android:keyLabel="l" />
        <Key android:popupKeyboard="@xml/shift_m" android:keyLabel="m" />
        <Key android:popupKeyboard="@xml/accent_n" android:keyLabel="n" />
        <Key android:popupKeyboard="@xml/accent_o" android:keyLabel="o" />
        <Key android:keyLabel="ö" />
        <Key android:popupKeyboard="@xml/shift_p" android:keyLabel="p" />
        <Key android:popupKeyboard="@xml/shift_q" android:keyLabel="q" />
        <Key android:popupKeyboard="@xml/shift_r" android:keyLabel="r" />
        <Key android:popupKeyboard="@xml/accent_s" android:keyLabel="s" />
        <Key android:popupKeyboard="@xml/accent_de_b" android:keyEdgeFlags="right" android:keyLabel="ß|ẞ" />
    </Row>
    <Row>
        <Key android:popupKeyboard="@xml/accent_t" android:keyEdgeFlags="left" android:keyLabel="t" />
        <Key android:popupKeyboard="@xml/accent_u" android:keyLabel="u" />
        <Key android:keyLabel="ü" />
        <Key android:popupKeyboard="@xml/shift_v" android:keyLabel="v" />
        <Key android:popupKeyboard="@xml/shift_w" android:keyLabel="w" />
        <Key android:popupKeyboard="@xml/shift_x" android:keyLabel="x" />
        <Key android:popupKeyboard="@xml/accent_y" android:keyLabel="y" />
        <Key android:popupKeyboard="@xml/accent_z" android:keyLabel="z" />
        <Key android:codes="46"  android:keyLabel="." />
        <Key android:codes="47"  android:keyLabel="/" />
        <Key android:codes="-10" android:keyEdgeFlags="right" android:keyLabel="@string/keyboardview_keycode_clipboard" android:keyIcon="@drawable/ic_ime_clipboard" />
    </Row>
    <Row android:rowEdgeFlags="bottom">
        <Key android:codes="-2" android:keyLabel="@string/keyboardview_keycode_mode_change" android:keyIcon="@drawable/ic_ime_symbols" android:keyEdgeFlags="left" />
        <Key android:codes="-1" android:keyLabel="@string/keyboardview_keycode_shift" android:keyIcon="@drawable/ic_ime_shift_off" />
        <Key android:codes="-9" android:keyLabel="@string/keyboardview_keycode_lang" android:keyIcon="@drawable/ic_ime_world" />
        <Key android:codes="32" android:keyLabel="@string/keyboardview_keycode_space" android:keyIcon="@drawable/ic_ime_space" android:keyWidth="@dimen/space_key_width" />
        <Key android:codes="-7" android:keyLabel="@string/keyboardview_keycode_voice" android:keyIcon="@drawable/ic_ime_voice" android:popupKeyboard="@xml/accent_voice" />
        <Key android:codes="-3" android:keyLabel="@string/keyboardview_keycode_left" android:keyIcon="@drawable/ic_ime_left_arrow" />
        <Key android:codes="-4" android:keyLabel="@string/keyboardview_keycode_right" android:keyIcon="@drawable/ic_ime_right_arrow" android:keyEdgeFlags="right" />
    </Row>
</Keyboard>
